generate-document/deploy/k8s/deploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: dc-generate-document
spec:
  replicas: 2
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: Rolling
  template:
    metadata:
      labels:
        deployment: generate-document
    spec:
      volumes:
        - name: log-volume
          persistentVolumeClaim:
            claimName: pvc-m2m-dc-log
        - name: application-config
          configMap:
            name: generate-document
            items:
              - key: application.properties
                path: application.properties
      containers:
      - name: generate-document
#        image: image-registry.openshift-image-registry.svc:5000/improvements-process-waiver/generate-document:v2.0.3 #DESARROLLO
        image: image-registry.openshift-image-registry.svc:5000/claro-service-waiver/generate-document:v2.0.3 #PRODUCCION
        resources:
          requests:
            memory: "500Mi"
            cpu: "200m"
          limits:
            memory: "1600Mi"
            cpu: "1000m"
        volumeMounts:
          - name: log-volume
            mountPath: /log
          - name: application-config
            mountPath: /config/application.properties
            subPath: application.properties
        imagePullPolicy: Always
        ports:
        - containerPort: 8400
          protocol: "TCP"
        readinessProbe:
          httpGet:
            path: /enterprise/m2m-autogestion/v2/actuator/health
            port: 8400
          initialDelaySeconds: 180
          periodSeconds: 240
        livenessProbe:
          initialDelaySeconds: 180
          periodSeconds: 240
          httpGet:
            path: /enterprise/m2m-autogestion/v2/actuator/health
            port: 8400
