generate-document/deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-generate-document
spec:
  selector:
    deploymentconfig: dc-generate-document
  ports:
    - name: servlet-http
      port: 8400
      protocol: TCP
      targetPort: 8400
